--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     
+    <div class="overlay">
+        <div class="popup">
+            <h2>Disclaimer</h2>
+            <p>This website is under development and will later implement YOLO for object detection.</p>
+            <button id="acceptButton">Accept</button>
+        </div>
+    </div>
+    <div class="background">
+        <div class="image1"></div>
+        <div class="image2"></div>
+    </div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
