--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
     <div class="overlay">
         <div class="popup">
             <h2>Disclaimer</h2>
@@ -19,7 +27,6 @@
     <div class="background">
         <div class="image1"></div>
         <div class="image2"></div>
-    </div>
     </div>
     <script src="./script.js"></script>
 </body>
