--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
         </ul>
     </nav>
 
-    <div class="overlay">
-        <div class="popup">
-            <h2>Disclaimer</h2>
-            <p>This website is under development and will later implement YOLO for object detection.</p>
-            <button id="acceptButton">Accept</button>
+    <div class="container">
+        <div class="overlay">
+            <div class="popup">
+                <h2>Disclaimer</h2>
+                <p>This website is under development and will later implement YOLO for object detection.</p>
+                <button id="acceptButton">Accept</button>
+            </div>
         </div>
-    </div>
-    <div class="background">
-        <div class="image1"></div>
-        <div class="image2"></div>
-    </div>
+        <div class="background">
+            <div class="images-container">
+                <div class="image1"></div>
+                <div class="image2"></div>
+            </div>
+        </div>
+        <div class="buttons-container">
+            <button class="gradient-button">Upload</button>
+            <button class="gradient-button">Stream Live</button>
+        </div>
     <script src="./script.js"></script>
 </body>
 </html>
