--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <button class="gradient-button">Upload</button>
             <button class="gradient-button">Stream Live</button>
         </div>
+    </div>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>This is where you can provide information about your website, your team, or your company.</p>
+        <!-- Add more content as needed (images, text, etc.) -->
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
