--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- Team details section (hidden by default) -->
         <div id="teamContent" class="team-details" style="display: none;"> <!-- Empty div to load team.html content -->
             <span class="close-button" id="closeTeamContent">&times;</span>
-            <h1>Team Details</h1>
+            <h1>Team : CodeBurglary</h1>
             <div class="team-member">
                 <img src="rohan.jpg" alt="Rohan Pandey Profile Picture">
                 <div class="team-member-details">
