--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         <div class="buttons-container">
             <button class="gradient-button">Upload</button>
+            <input type="file" id="fileInput" style="display: none;">
             <button class="gradient-button">Stream Live</button>
         </div>
     </div>
