backend connected flask

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="image2"></div>
             </div>
         </div>
+        <video id="video" src="http://localhost:5000/video_stream"></video>
         <div class="buttons-container">
             <button class="gradient-button">Upload</button>
             <input type="file" id="fileInput" style="display: none;">
