--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="overlay">
             <div class="popup">
                 <h2>Disclaimer</h2>
-                <p>This website is under development and will later implement YOLO for object detection.</p>
+                <p>This project is currently in development and is not authorized for on-road use.</br>User discretion is advised. The publishing team disclaims responsibility for any misuse.</p>
                 <button id="acceptButton">Accept</button>
             </div>
         </div>
