update stream live button - added stream service

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="buttons-container">
             <button class="gradient-button">Upload</button>
             <input type="file" id="fileInput" style="display: none;">
-            <button class="gradient-button">Stream Live</button>
+            <button onclick="window.location.href='http://localhost:5000/video_stream?type=w'" class="gradient-button">Stream Live</button>
         </div>
     </div>
     <!-- Team details section (hidden by default) -->
