--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="./new_index.html">Home</a></li>
             <li><a href="#" id="aboutButton">About</a></li> <!-- Add id to the About button -->
             <li><a href="#" id="teamButton">Team</a></li> <!-- Add id to the Team button -->
             <li><a href="#">Contact</a></li>
