fixed 'svg not a button' issue

--- a/new_index.html
+++ b/new_index.html
@@ -53,8 +53,8 @@
         <img src="assets/header.svg" class="title">
         <img src="assets/ground.svg" class="ground">
 
-        <img src="assets/upload.svg" class="upload">
-        <img src="assets/stream.svg" class="stream">
+        <a href="www.example.com" class="upload"><input type="image" src="assets/upload.svg" class="upload"></a>
+        <a href="www.example.com" class="stream"><input type="image" src="assets/stream.svg" class="stream"></a>
 
 
     </section>
