--- a/new_index.html
+++ b/new_index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drive Guardian</title>
     <link rel="stylesheet" href="./new_styles.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200..800&display=swap" rel="stylesheet">
     <style>
         ::-webkit-scrollbar {
           width: 13px;
@@ -29,14 +31,14 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="active">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#" id="teamButton">Team</a>
             <a href="#">Contact</a>
         </nav>
     </header>
 
-    <section class="home">
+    <section id="home" class="home">
         <div class="overlay">
             <div class="popup">
                 <h2>Disclaimer</h2>
@@ -61,8 +63,8 @@
 
     </section>
 
-    <section class="about">
-        <h1>About Us</h1>
+    <section id="about" class="how-it-works">
+        <h1># How It Works</h1>
         <br>
         <p>In our groundbreaking project, we're revolutionizing road safety with cutting-edge technology. By integrating live feeds from dashcam videos, we're creating a sophisticated real-time analysis system that goes beyond mere observation. Utilizing advanced algorithms, we not only detect objects but also predict potential hazards, providing drivers with crucial insights to navigate safely. What sets us apart is our seamless integration of upscaling techniques, enhancing the clarity and accuracy of the video feed for precise analysis. When an object veers too close, our system prompts drivers to take breaks, mitigating potential accidents and ensuring a smoother journey for all. This holistic approach to road safety isn't just about reacting to dangers; it's about proactively empowering drivers with the tools they need to stay safe on the road.</p>
         <br>
