updated 'how it works' section, design complete. still need content though

--- a/new_index.html
+++ b/new_index.html
@@ -46,42 +46,46 @@
                 <button id="acceptButton">Accept</button>
             </div>
         </div>
-        <img src="assets/bush_left.svg" class="bush1">
-        <img src="assets/bush_right.svg" class="bush2">
-        <img src="assets/leaf_left.svg" class="leaf1">
-        <img src="assets/road.svg" class="road">
-        <img src="assets/leaf_right.svg" class="leaf2">
+        <img src="assets/landing-page/bush_left.svg" class="bush1">
+        <img src="assets/landing-page/bush_right.svg" class="bush2">
+        <img src="assets/landing-page/leaf_left.svg" class="leaf1">
+        <img src="assets/landing-page/road.svg" class="road">
+        <img src="assets/landing-page/leaf_right.svg" class="leaf2">
 
-        <img src="assets/header.svg" class="title">
-        <img src="assets/ground.svg" class="ground">
+        <img src="assets/landing-page/header.svg" class="title">
+        <img src="assets/landing-page/ground.svg" class="ground">
 
         <input type="file" id="fileInput" style="display:none;">
-        <input type="image" src="assets/upload.svg" class="upload" onclick="document.getElementById('fileInput').click();">
+        <input type="image" src="assets/landing-page/upload.svg" class="upload" onclick="document.getElementById('fileInput').click();">
         
-        <input type="image" src="assets/stream.svg" class="stream" onclick="window.location.href='http://localhost:5000/video_stream?type=w'">
-
-
+        <input type="image" src="assets/landing-page/stream.svg" class="stream" onclick="window.location.href='http://localhost:5000/video_stream?type=w'">
     </section>
 
-    <section id="about" class="how-it-works">
+    <section class="how-it-works">
         <h1># How It Works</h1>
-        <br>
-        <p>In our groundbreaking project, we're revolutionizing road safety with cutting-edge technology. By integrating live feeds from dashcam videos, we're creating a sophisticated real-time analysis system that goes beyond mere observation. Utilizing advanced algorithms, we not only detect objects but also predict potential hazards, providing drivers with crucial insights to navigate safely. What sets us apart is our seamless integration of upscaling techniques, enhancing the clarity and accuracy of the video feed for precise analysis. When an object veers too close, our system prompts drivers to take breaks, mitigating potential accidents and ensuring a smoother journey for all. This holistic approach to road safety isn't just about reacting to dangers; it's about proactively empowering drivers with the tools they need to stay safe on the road.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officia et dicta debitis quas aperiam maiores corporis nulla reiciendis maxime eaque dolorem ex provident ab, id placeat omnis corrupti obcaecati.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam nesciunt hic, consequatur maxime facere earum modi expedita sint dolores itaque natus assumenda, quibusdam maiores dignissimos, rem architecto eaque commodi?</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nobis laborum alias consequuntur porro, magni laboriosam veniam dicta, optio impedit officiis animi sed. Quae delectus, ullam placeat non nam tenetur.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nobis laborum alias consequuntur porro, magni laboriosam veniam dicta, optio impedit officiis animi sed. Quae delectus, ullam placeat non nam tenetur.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nobis laborum alias consequuntur porro, magni laboriosam veniam dicta, optio impedit officiis animi sed. Quae delectus, ullam placeat non nam tenetur.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nobis laborum alias consequuntur porro, magni laboriosam veniam dicta, optio impedit officiis animi sed. Quae delectus, ullam placeat non nam tenetur.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nobis laborum alias consequuntur porro, magni laboriosam veniam dicta, optio impedit officiis animi sed. Quae delectus, ullam placeat non nam tenetur.</p>
-        
+        <div class="hiw-container">
+          <div class="room-one">
+            <img src="./assets/how-it-works/how-it(1).png">
+            <p class="speech-bubble stream">STREAM</p>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, quaerat temporibus repellat odit ad maxime consectetur, aut non porro eos fugit, debitis a quis iste iure minima ducimus. Minus, iusto!
+            </p>
+          </div>
+          <div class="room-two">
+            <img src="./assets/how-it-works/how-it(2).png">
+            <p class="speech-bubble process">PROCESS</p>
+            <p class="description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum veniam sunt maxime consequatur, beatae placeat necessitatibus nostrum dolore architecto a laboriosam ut ex tempore quo? Exercitationem, placeat? Harum, tempora obcaecati.
+            </p>
+          </div>
+          <div class="room-three">
+            <img src="./assets/how-it-works/how-it(3).png">
+            <p class="speech-bubble observe">OBSERVE</p>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae maiores tenetur illum quo dignissimos assumenda nihil doloremque totam molestiae, dolorum, repudiandae cumque delectus explicabo, placeat officia! Qui aperiam quis modi!
+            </p>
+          </div>
+        </div>        
     </section>
 
     <script src="new_script.js"></script>
