added divider one after 'how it works'

--- a/new_index.html
+++ b/new_index.html
@@ -88,6 +88,13 @@
         </div>        
     </section>
 
+    <div class="s1d623h8f1">
+      <h2>
+        <span class="black">LOREM IPSUM</span>
+        <span class="white">LOREM IPSUM</span>
+      </h2>
+    </div>
+
     <script src="new_script.js"></script>
 </body>
 </html>
