sorry, bad commit - just changed 'how it works' to 'how to use'. nothing much

--- a/new_index.html
+++ b/new_index.html
@@ -61,25 +61,25 @@
         <input type="image" src="assets/landing-page/stream.svg" class="stream" onclick="window.location.href='http://localhost:5000/video_stream?type=w'">
     </section>
 
-    <section class="how-it-works">
-        <h1># How It Works</h1>
-        <div class="hiw-container">
+    <section class="how-to-use">
+        <h1># How To Use</h1>
+        <div class="htu-container">
           <div class="room-one">
-            <img src="./assets/how-it-works/how-it(1).png">
+            <img src="./assets/how-to-use/how-to(1).png">
             <p class="speech-bubble stream">STREAM</p>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, quaerat temporibus repellat odit ad maxime consectetur, aut non porro eos fugit, debitis a quis iste iure minima ducimus. Minus, iusto!
             </p>
           </div>
           <div class="room-two">
-            <img src="./assets/how-it-works/how-it(2).png">
+            <img src="./assets/how-to-use/how-to(2).png">
             <p class="speech-bubble process">PROCESS</p>
             <p class="description">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum veniam sunt maxime consequatur, beatae placeat necessitatibus nostrum dolore architecto a laboriosam ut ex tempore quo? Exercitationem, placeat? Harum, tempora obcaecati.
             </p>
           </div>
           <div class="room-three">
-            <img src="./assets/how-it-works/how-it(3).png">
+            <img src="./assets/how-to-use/how-to(3).png">
             <p class="speech-bubble observe">OBSERVE</p>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae maiores tenetur illum quo dignissimos assumenda nihil doloremque totam molestiae, dolorum, repudiandae cumque delectus explicabo, placeat officia! Qui aperiam quis modi!
