--- a/index.html
+++ b/index.html
@@ -96,46 +96,50 @@
     </div>
 
     <section class="how-it-works">
-      <input type="radio" name="slide" id="c1" checked>
-      <label for="c1" class="card">
-        <div class="row">
-          <div class="icon">1</div>
-          <div class="description">
-            <h4>Winter</h4>
-            <p>Winter has so much to offer - creative activities</p>
-          </div>
+      <div class="hiw- wrapper">
+        <div class="hiw-container">
+          <input type="radio" name="slide" id="c1" checked>
+          <label for="c1" class="card">
+            <div class="row">
+              <div class="icon">1</div>
+              <div class="description">
+                <h4>Winter</h4>
+                <p>Winter has so much to offer - creative activities</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide" id="c2" >
+          <label for="c2" class="card">
+            <div class="row">
+              <div class="icon">2</div>
+              <div class="description">
+                <h4>Digital Technology</h4>
+                <p>Gets better every day - stay tuned</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide" id="c3" >
+          <label for="c3" class="card">
+            <div class="row">
+              <div class="icon">3</div>
+              <div class="description">
+                <h4>Globalization</h4>
+                <p>Help people all over the world</p>
+              </div>
+            </div>
+          </label>
+          <input type="radio" name="slide" id="c4" >
+          <label for="c4" class="card">
+            <div class="row">
+              <div class="icon">4</div>
+              <div class="description">
+                <h4>New technologies</h4>
+                <p>Space engineering becomes more and more advanced</p>
+              </div>
+            </div>
+          </label>
         </div>
-      </label>
-      <input type="radio" name="slide" id="c2" >
-      <label for="c2" class="card">
-        <div class="row">
-          <div class="icon">2</div>
-          <div class="description">
-            <h4>Digital Technology</h4>
-            <p>Gets better every day - stay tuned</p>
-          </div>
-        </div>
-      </label>
-      <input type="radio" name="slide" id="c3" >
-      <label for="c3" class="card">
-        <div class="row">
-          <div class="icon">3</div>
-          <div class="description">
-            <h4>Globalization</h4>
-            <p>Help people all over the world</p>
-          </div>
-        </div>
-      </label>
-      <input type="radio" name="slide" id="c4" >
-      <label for="c4" class="card">
-        <div class="row">
-          <div class="icon">4</div>
-          <div class="description">
-            <h4>New technologies</h4>
-            <p>Space engineering becomes more and more advanced</p>
-          </div>
-        </div>
-      </label>
+      </div>
     </section>
     <script src="script.js"></script>
 </body>
