update styles.css, updated imgs in assets, updated content in index.html

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             <div class="row">
               <div class="icon">1</div>
               <div class="description">
-                <h4>Winter</h4>
-                <p>Winter has so much to offer - creative activities</p>
+                <h4>Sobel-Feldman Filter</h4>
+                <p>Creates a binary image - Advanced color transformation techniques</p>
               </div>
             </div>
           </label>
@@ -113,8 +113,8 @@
             <div class="row">
               <div class="icon">2</div>
               <div class="description">
-                <h4>Digital Technology</h4>
-                <p>Gets better every day - stay tuned</p>
+                <h4>Estimating the polynomials</h4>
+                <p>Plotting a smoother curve using Ax²+Bx+C</p>
               </div>
             </div>
           </label>
@@ -123,8 +123,8 @@
             <div class="row">
               <div class="icon">3</div>
               <div class="description">
-                <h4>Globalization</h4>
-                <p>Help people all over the world</p>
+                <h4>Preprocessing data & extracting features</h4>
+                <p>Object Detection using HOG Sub-Sampling</p>
               </div>
             </div>
           </label>
@@ -133,8 +133,8 @@
             <div class="row">
               <div class="icon">4</div>
               <div class="description">
-                <h4>New technologies</h4>
-                <p>Space engineering becomes more and more advanced</p>
+                <h4>Lane + Object Detection</h4>
+                <p>The final part: Putting this all together</p>
               </div>
             </div>
           </label>
