update index.html - new section

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
         </div>
       </div>
     </section>
+
+    <div class="spacer layer1"></div>
+
+    <section class="contact">
+
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
