spinner for buffer
compensated for buffer time after uploading file by adding a spinner class

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drive Guardian</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon"><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200..800&display=swap" rel="stylesheet">
     <style>
